client first steps
