# server/src/routes/swagger.json
@@ -22,13 +22,18 @@
 					},
 					"token": {
 						"type": "string"
+					},
+					"validTo": {
+						"type": "string",
+						"format": "date-time"
 					}
 				},
 				"required": [
 					"email",
 					"name",
 					"roles",
-					"token"
+					"token",
+					"validTo"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -138,6 +143,48 @@
 						}
 					}
 				}
+			}
+		},
+		"/auth/checktoken": {
+			"get": {
+				"operationId": "CheckToken",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "boolean"
+								}
+							}
+						}
+					}
+				},
+				"security": [
+					{
+						"token": []
+					}
+				],
+				"parameters": []
+			}
+		},
+		"/auth/logout": {
+			"post": {
+				"operationId": "Logout",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "boolean"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": []
 			}
 		},
 		"/users/{id}": {
